# youtube-bulk-upload

./: .gitignore  README.md  pyproject.toml
.github/: set_github_vars.py
.github/workflows/: publish.yml  testing.yml
images/: ClientSecretInstructionsVideoThumbnail.xcf
tests/: test_data.py  youtube_bulk_upload_test.py
youtube_bulk_upload/: __init__.py  __init__.pyi  bulk_upload.py  bulk_upload.pyi  cli.py  gui.py
